<resources>
    <!-- App related strings -->
    <string name="app_name">Optics Companion</string>

    <!-- Button Text Strings -->
    <string name="button_text_lens_button">Lens Parameters</string>
    <string name="button_text_process_button">Process Parameters</string>
    <string name="button_text_zygo_button">Zygo Reference Spheres</string>
    <string name="button_text_reference_button">General Reference</string>
    <string name="button_text_sag_button">Sag</string>
    <string name="button_text_radius_button">Radius</string>
    <string name="button_text_diameter_button">Diameter</string>
    <string name="button_text_calculate_button">Calculate</string>
    <string name="button_text_speed_button">Cutting Spd</string>
    <string name="button_text_rpm_button">Tool RPM</string>
    <string name="button_text_tool_diameter_button">Tool Dia</string>
    <string name="button_text_find_sphere">Find Zygo Sphere</string>
    <string name="string_tool_diameter">Tool Diameter</string>

    <!-- Hint Text -->
    <string name="hint_enter_radius">Enter radius</string>
    <string name="hint_enter_diameter">Enter diameter</string>
    <string name="hint_enter_sag">Enter sag</string>
    <string name="hint_enter_tool_diameter">Enter Tool Diameter</string>
    <string name="hint_enter_cutting_speed">Enter Cutting Speed</string>
    <string name="hint_enter_tool_rpm">Enter Tool RPM</string>
    <string name="hint_upper_bell_diameter">Diameter of upper bell</string>
    <string name="hint_lower_bell_diameter">Diameter of lower bell</string>
    <string name="hint_upper_radius">Enter the upper radius</string>
    <string name="hint_center_thickness">Enter the center thickness</string>
    <string name="hint_lower_radius">Enter the lower radius</string>

    <!-- Label Text -->
    <string name="label_radius">Radius</string>
    <string name="label_result_diameter">Diameter</string>
    <string name="label_sag">Sag</string>
    <string name="label_result_cutting_speed">Cutting Speed</string>
    <string name="label_rpm">Tool RPM</string>
    <string name="label_lens_shape_spinner">Lens Shape</string>
    <string name="label_upper_bell_diameter">Upper Bell</string>
    <string name="label_lower_bell_diameter">Lower Bell</string>
    <string name="label_upper_radius">Upper Radius</string>
    <string name="label_lower_radius">Lower Radius</string>
    <string name="label_ct">CT</string>

    <!-- Radio Buttons -->
    <string name="radio_convex">Convex</string>>
    <string name="radio_concave">Concave</string>
    <string name="shape_concave">Concave</string>
    <string name="shape_convex">Convex</string>

    <!-- Menu Strings -->
    <string name="nav_spheres">Sphere Calculations</string>
    <string name="nav_zygo">Select Zygo Spheres</string>
    <string name="nav_process">Process Parameters</string>
    <string name="nav_centering">Centering</string>
    <string name="nav_open_drawer">Open Drawer</string>
    <string name="nav_close_drawer">Close Drawer</string>

    <!-- Lens shapes for centering -->
    <string-array name="shapes">
        <item>Convex - Plano</item>
        <item>Plano - Convex</item>
        <item>Concave - Plano</item>
        <item>Plano - Concave</item>
        <item>Biconvex</item>
        <item>Biconcave</item>
        <item>Concave - Convex</item>
        <item>Convex - Concave</item>
    </string-array>

    <!-- String Defaults -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
