<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_spheres"
            android:icon="@android:drawable/ic_menu_edit"
            android:title="@string/nav_spheres"
            android:checked="true" />
        <item
            android:id="@+id/nav_zygo"
            android:icon="@android:drawable/ic_menu_edit"
            android:title="@string/nav_zygo" />
        <item
            android:id="@+id/nav_process"
            android:icon="@android:drawable/ic_menu_edit"
            android:title="@string/nav_process" />
        <item
            android:id="@+id/nav_centering"
            android:icon="@android:drawable/ic_menu_edit"
            android:title="@string/nav_centering" />

        <!--<item android:title="@string/nav_support">
            <menu>
                <item
                    android:id="@+id/nav_help"
                    android:icon="@android:drawable/ic_menu_help"
                    android:title="@string/nav_help" />
                <item
                    android:id="@+id/nav_feedback"
                    android:icon="@android:drawable/sym_action_email"
                    android:title="@string/nav_feedback" />
            </menu>
        </item>
        -->
    </group>

</menu>