<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:importantForAutofill="noExcludeDescendants"
    tools:context="com.example.opticscompanion.SagFragment"
    android:padding="16dp">

    <TextView
        android:id="@+id/operandLabel1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/string_tool_diameter"
        app:layout_constraintBaseline_toBaselineOf="@+id/operandValue1"
        app:layout_constraintEnd_toStartOf="@+id/operandValue1" />

    <EditText
        android:id="@+id/operandValue1"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_enter_tool_diameter"
        android:inputType="number|numberDecimal"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/operandLabel2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/label_result_cutting_speed"
        app:layout_constraintBaseline_toBaselineOf="@+id/operandValue2"
        app:layout_constraintEnd_toStartOf="@+id/operandValue2" />

    <EditText
        android:id="@+id/operandValue2"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/hint_enter_cutting_speed"
        android:inputType="number|numberDecimal|numberSigned"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/operandValue1" />

    <Button
        android:id="@+id/calculateButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:keyboardNavigationCluster="false"
        android:text="@string/button_text_calculate_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias=".75"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/operandValue2" />

    <TextView
        android:id="@+id/resultLabel"
        style="@style/resultText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/label_rpm"
        android:visibility="invisible"
        app:layout_constraintBaseline_toBaselineOf="@+id/resultText"
        app:layout_constraintEnd_toStartOf="@+id/resultText" />

    <TextView
        android:id="@+id/resultText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:textColor="@color/colorSecondaryText"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calculateButton" />


</androidx.constraintlayout.widget.ConstraintLayout>