<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:importantForAutofill="noExcludeDescendants"
    android:padding="16dp"
    tools:context="com.example.opticscompanion.SagFragment">

    <TextView
        android:id="@+id/operandLabel1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:gravity="right"
        android:text="@string/label_sag"
        app:layout_constraintBaseline_toBaselineOf="@+id/operandValue1"
        app:layout_constraintEnd_toStartOf="@+id/operandValue1"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_weight="3"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/operandValue1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_enter_sag"
        android:inputType="number|numberDecimal|numberSigned"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_weight="7"
        app:layout_constraintStart_toEndOf="@+id/operandLabel1"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/operandLabel2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:gravity="right"
        android:text="@string/label_radius"
        app:layout_constraintBaseline_toBaselineOf="@+id/operandValue2"
        app:layout_constraintEnd_toStartOf="@+id/operandValue2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_weight="3"
        app:layout_constraintStart_toStartOf="parent" />


    <EditText
        android:id="@+id/operandValue2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/hint_enter_diameter"
        android:inputType="number|numberDecimal|numberSigned"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_weight="7"
        app:layout_constraintStart_toEndOf="@+id/operandLabel2"
        app:layout_constraintTop_toBottomOf="@+id/operandValue1" />

    <Button
        android:id="@+id/calculateButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:keyboardNavigationCluster="false"
        android:text="@string/button_text_calculate_button"
        app:layout_constraintTop_toBottomOf="@+id/operandValue2" />

    <TextView
        android:id="@+id/resultLabel"
        style="@style/resultText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/label_result_diameter"
        android:visibility="invisible"
        app:layout_constraintBaseline_toBaselineOf="@+id/resultText"
        app:layout_constraintEnd_toStartOf="@+id/resultText" />

    <TextView
        android:id="@+id/resultText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:textColor="@color/colorSecondaryText"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calculateButton" />


</androidx.constraintlayout.widget.ConstraintLayout>