<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawer_layout">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:importantForAutofill="noExcludeDescendants">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar_main" />

        <Button
            android:id="@+id/speedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:onClick="clickCuttingSpeedButton"
            android:text="@string/button_text_speed_button"
            app:layout_constraintEnd_toStartOf="@+id/minDiameterButton"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/rpmButton"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" />


        <Button
            android:id="@+id/rpmButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:onClick="clickRpmButton"
            android:text="@string/button_text_rpm_button"
            app:layout_constraintBaseline_toBaselineOf="@+id/speedButton"
            app:layout_constraintEnd_toStartOf="@+id/speedButton"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/minDiameterButton"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="clickDiameterButton"
            android:text="@string/button_text_tool_diameter_button"
            app:layout_constraintBaseline_toBaselineOf="@+id/speedButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/speedButton" />

        <FrameLayout
            android:id="@+id/fragment_container"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/speedButton">

        </FrameLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/nav_view"
        android:layout_gravity="start"
        app:menu="@menu/menu_nav" />

</androidx.drawerlayout.widget.DrawerLayout>